--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "react-scripts": "2.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "start-storybook -p 6006"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +18,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@storybook/react": "^3.4.11",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.0.4"
+  }
 }
