--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "start-storybook -p 6006"
@@ -21,6 +23,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@storybook/addon-knobs": "^3.4.11",
     "@storybook/react": "^3.4.11",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.0.4"
