--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@storybook/addon-actions": "^3.4.11",
     "@storybook/addon-knobs": "^3.4.11",
     "@storybook/react": "^3.4.11",
     "babel-core": "^6.26.3",
