--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "recompose": "^0.30.0"
   },
   "scripts": {
-    "start": "start-storybook -p 6006"
+    "start": "start-storybook -p 6006",
+    "test": "jest --coverage --config ./.jest-config.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -23,10 +24,18 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@storybook/addon-actions": "^3.4.11",
     "@storybook/addon-knobs": "^3.4.11",
+    "@storybook/addon-storyshots": "^3.4.11",
     "@storybook/react": "^3.4.11",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.0.4"
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "8.0.4",
+    "babel-plugin-require-context-hook": "^1.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "enzyme": "^3.7.0",
+    "enzyme-to-json": "^3.3.4",
+    "jest-mock-random": "^1.0.2",
+    "react-test-renderer": "^16.6.0"
   }
 }
