--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "picture-randomizer",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
