--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "picture-randomizer",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": false,
+  "main": "build/index.js",
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
@@ -11,7 +12,9 @@
   },
   "scripts": {
     "start": "start-storybook -p 6006",
-    "test": "jest --coverage --config ./.jest-config.json"
+    "test": "jest --coverage --config ./.jest-config.json",
+    "build": "babel src -d build",
+    "prepublishOnly": "yarn build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -23,19 +26,22 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@storybook/addon-actions": "^3.4.11",
     "@storybook/addon-knobs": "^3.4.11",
     "@storybook/addon-storyshots": "^3.4.11",
     "@storybook/react": "^3.4.11",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "8.0.4",
+    "babel-loader": "^8.0.4",
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-preset-es2015": "^6.24.1",
     "enzyme": "^3.7.0",
     "enzyme-to-json": "^3.3.4",
     "jest-mock-random": "^1.0.2",
-    "react-test-renderer": "^16.6.0"
+    "react-test-renderer": "^16.6.0",
+    "webpack": "^4.23.1"
   }
 }
