--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-preset-es2015": "^6.24.1",
     "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
     "jest-mock-random": "^1.0.2",
     "react-test-renderer": "^16.6.0",
